--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="counters6 counters cid-rXizV49xrI" id="counters6-a">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="counters6 counters cid-rXizV49xrI" id="counters6-a">
 
     
 
@@ -110,34 +110,34 @@
     <div class="container">
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">Screen Shots</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rXiAC6gGcm">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rXiCTIq33y">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/img-2808-510x907.png" alt="" data-slide-to="0" title="" data-target="#rXiAC6gc8X">
+                    <img class="w-100" src="assets/images/img-2808-510x907.png" alt="" data-slide-to="0" title="" data-target="#rXiCTIqrNs">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/img-2798-510x907.png" alt="" data-slide-to="1" title="" data-target="#rXiAC6gc8X">
+                    <img class="w-100" src="assets/images/img-2798-510x907.png" alt="" data-slide-to="1" title="" data-target="#rXiCTIqrNs">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/img-2789-510x907.png" alt="" data-slide-to="2" title="" data-target="#rXiAC6gc8X">
+                    <img class="w-100" src="assets/images/img-2789-510x907.png" alt="" data-slide-to="2" title="" data-target="#rXiCTIqrNs">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/img-2788-510x907.png" alt="" data-slide-to="3" title="" data-target="#rXiAC6gc8X">
+                    <img class="w-100" src="assets/images/img-2788-510x907.png" alt="" data-slide-to="3" title="" data-target="#rXiCTIqrNs">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rXiAC6gGcm">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rXiCTIq33y">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rXiAC6gc8X">
+                        <div class="carousel slide" data-ride="carousel" id="rXiCTIqrNs">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/img-2808-510x907.png" alt="">
@@ -153,18 +153,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rXiAC6gc8X"></li>
-                                <li data-slide-to="1" data-target="#rXiAC6gc8X"></li>
-                                <li data-slide-to="2" data-target="#rXiAC6gc8X"></li>
-                                <li data-slide-to="3" data-target="#rXiAC6gc8X"></li>
+                                <li data-slide-to="0" class="active" data-target="#rXiCTIqrNs"></li>
+                                <li data-slide-to="1" data-target="#rXiCTIqrNs"></li>
+                                <li data-slide-to="2" data-target="#rXiCTIqrNs"></li>
+                                <li data-slide-to="3" data-target="#rXiCTIqrNs"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rXiAC6gc8X">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rXiCTIqrNs">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rXiAC6gc8X">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rXiCTIqrNs">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
