--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                                 <h3 class="img-text mbr-fonts-style display-1">iOS</h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"></h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
+                              <a href="https://sibapp.com/applications/memodict"><img src="https://sibapp.com/files/Sibapp-Download-Icons/dl-eng.png"></a>
+                              </h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"></p>
                             </div>
                         </div>
