--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
-                              <a href="https://sibapp.com/applications/memodict"><img src="https://sibapp.com/files/Sibapp-Download-Icons/dl-eng.png"></a>
+                              <a href="https://sibapp.com/applications/memodict">
+                                <img src="Sibapp-Badge-Gray.png">
+                                  </a>
                               </h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"></p>
                             </div>
