--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <div class="card-img pb-3">
                                 <h3 class="img-text mbr-fonts-style display-1">iOS</h3>
                             </div>
-                            <div class="card-text">
+                            <div class="card-text" style="width: 60%;">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                               <a href="https://sibapp.com/applications/memodict">
                                 <img src="Sibapp-Badge-Gray.png">
