--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
                 </div>
             </div>
     </div>
+  
+      <div class="container">
+            <div class="media-container-row" style="width: 78%;">
+                <div class="img-item">
+                  <a href="https://sibapp.com/applications/memodict">
+                    <img src="assets/images/Sibapp-Badge-Black.png" alt="" title="">
+                  </a>
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-1">iOS</p>
+                    </div>
+                </div>
+                <div class="img-item">
+                    <img src="assets/images/badge-new-563x167.png" alt="" title="">
+                    <div class="img-caption">
+                        <p class="mbr-fonts-style align-center mbr-black display-1">
+                            Android</p>
+                    </div>
+                </div>
+            </div>
+    </div>
 </section>
 
 <section class="mbr-section content6 cid-rXiwYF4mN5" id="content6-5">
