--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
     <div class="container">
             <div class="media-container-row" style="width: 78%;">
                 <div class="img-item">
-                  <a href="https://sibapp.com/applications/memodict">
-                    <img src="assets/images/Sibapp-Badge-Black.png" alt="" title="">
+                  <a href="https://anardoni.com/ios/app/iHgF3KJV2?lng=fa">
+                    <img src="anardoni-badge-black-persian.png" alt="" title="">
                   </a>
                     <div class="img-caption">
-                        <p class="mbr-fonts-style align-center mbr-black display-1">iOS</p>
+                        <p class="mbr-fonts-style align-center mbr-black display-1"></p>
                     </div>
                 </div>
                 <div class="img-item">
-                    <img src="assets/images/badge-new-563x167.png" alt="" title="">
+                  <a href="https://myket.ir/app/com.ariahassanpour.memodict1">
+                    <img src="assets/images/get1-fa.png" alt="" title="">
+                  </a>
                     <div class="img-caption">
                         <p class="mbr-fonts-style align-center mbr-black display-1">
-                            Android</p>
+                            </p>
                     </div>
                 </div>
             </div>
